[gd_scene load_steps=10 format=4 uid="uid://bygwnc6jds3np"]

[ext_resource type="TileSet" uid="uid://dndttuepcmd10" path="res://resources/tile_sets/world_tile_set.tres" id="1_c6fgw"]
[ext_resource type="Script" uid="uid://b40ke5aritekm" path="res://levels/mining_field_0.gd" id="1_iobur"]
[ext_resource type="Script" uid="uid://b30ev7rlpxd01" path="res://mining_spot_manager.gd" id="2_xddxw"]
[ext_resource type="PackedScene" uid="uid://burrwl5mjocls" path="res://resources/tile_sets/mining_tile.tscn" id="3_j0li1"]
[ext_resource type="Texture2D" uid="uid://d3igihd7r4d6p" path="res://assets/[Anokolisa] Pixel Crawler - Free Pack 2.0.3/Environment/Tilesets/Wall_Tiles.png" id="4_iobur"]
[ext_resource type="PackedScene" uid="uid://bnme5tv6cv8h8" path="res://levels/teleport_points/teleport_point.tscn" id="6_j0li1"]
[ext_resource type="PackedScene" uid="uid://cvbpmsdmb7q7o" path="res://mining_minigame/mining_minigame.tscn" id="7_iobur"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_efxa6"]
texture = ExtResource("4_iobur")
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
10:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
11:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
11:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
10:3/0 = 0
11:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
10:4/0 = 0
11:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
9:5/0 = 0
10:5/0 = 0
11:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
9:6/0 = 0
10:6/0 = 0
11:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0
8:7/0 = 0
9:7/0 = 0
10:7/0 = 0
11:7/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
7:8/0 = 0
8:8/0 = 0
9:8/0 = 0
10:8/0 = 0
0:9/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
4:9/0 = 0
5:9/0 = 0
6:9/0 = 0
7:9/0 = 0
8:9/0 = 0
9:9/0 = 0
10:9/0 = 0
11:9/0 = 0
1:10/0 = 0
2:10/0 = 0
3:10/0 = 0
4:10/0 = 0
7:10/0 = 0
8:10/0 = 0
9:10/0 = 0
10:10/0 = 0
0:11/0 = 0
1:11/0 = 0
2:11/0 = 0
3:11/0 = 0
4:11/0 = 0
5:11/0 = 0
6:11/0 = 0
7:11/0 = 0
8:11/0 = 0
9:11/0 = 0
10:11/0 = 0
11:11/0 = 0
1:12/0 = 0
2:12/0 = 0
3:12/0 = 0
4:12/0 = 0
7:12/0 = 0
8:12/0 = 0
9:12/0 = 0
10:12/0 = 0
0:13/0 = 0
1:13/0 = 0
2:13/0 = 0
3:13/0 = 0
4:13/0 = 0
5:13/0 = 0
6:13/0 = 0
7:13/0 = 0
8:13/0 = 0
9:13/0 = 0
10:13/0 = 0
11:13/0 = 0
1:14/0 = 0
2:14/0 = 0
3:14/0 = 0
4:14/0 = 0
7:14/0 = 0
8:14/0 = 0
9:14/0 = 0
10:14/0 = 0
0:15/0 = 0
1:15/0 = 0
2:15/0 = 0
3:15/0 = 0
4:15/0 = 0
5:15/0 = 0
6:15/0 = 0
7:15/0 = 0
8:15/0 = 0
9:15/0 = 0
10:15/0 = 0
11:15/0 = 0
0:16/0 = 0
1:16/0 = 0
2:16/0 = 0
3:16/0 = 0
4:16/0 = 0
5:16/0 = 0
6:16/0 = 0
7:16/0 = 0
8:16/0 = 0
9:16/0 = 0
10:16/0 = 0
11:16/0 = 0
0:17/0 = 0
1:17/0 = 0
2:17/0 = 0
3:17/0 = 0
4:17/0 = 0
5:17/0 = 0
6:17/0 = 0
7:17/0 = 0
8:17/0 = 0
9:17/0 = 0
10:17/0 = 0
11:17/0 = 0

[sub_resource type="TileSet" id="TileSet_x1n4a"]
sources/1 = SubResource("TileSetAtlasSource_efxa6")

[node name="MiningField0" type="Node2D" node_paths=PackedStringArray("mining_minigame", "mining_spot_manager", "default_teleport", "_teleport_points")]
script = ExtResource("1_iobur")
mining_minigame = NodePath("CanvasLayer/MiningMinigame")
mining_spot_manager = NodePath("MiningSpotManager")
default_teleport = NodePath("TeleportPoints/TeleportPoint")
_teleport_points = NodePath("TeleportPoints")

[node name="GroundTileMapLayer" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAAIAAgACwALAAMAAAAIAAcACwALAAIAAAAIAAYACwALAAIAAAAIAAUACwALAAIAAAAIAAQACwALAAIAAAAIAAMACwALAAIAAAAIAAIACwALAAIAAAAIAAEACwAGAAIAAAAIAAAACwAJAAIAAAAIAP//CwAGAAEAAAAIAP7/CwALAAIAAAAIAP3/CwALAAIAAAAIAPz/CwALAAIAAAAIAPv/CwALAAIAAAAIAPr/CwALAAIAAAAIAPn/CwALAAIAAAAIAPj/CwALAAAAAAAHAAgACwAJAAMAAAAHAAcACwAJAAIAAAAHAAYACwAJAAIAAAAHAAUACwAJAAIAAAAHAAQACwAJAAIAAAAHAAMACwAJAAIAAAAHAAIACwAJAAIAAAAHAAEACwAJAAIAAAAHAAAACwAJAAIAAAAHAP//CwAJAAIAAAAHAP7/CwAJAAIAAAAHAP3/CwAJAAIAAAAHAPz/CwAJAAIAAAAHAPv/CwAJAAIAAAAHAPr/CwAJAAIAAAAHAPn/CwAJAAIAAAAHAPj/BAAFAAcAAAAGAAgACwAJAAMAAAAGAAcACwAJAAIAAAAGAAYACwAJAAIAAAAGAAUACwAJAAIAAAAGAAQACwAJAAIAAAAGAAMACwAJAAIAAAAGAAIACwAJAAIAAAAGAAEACwAJAAIAAAAGAAAACwAJAAIAAAAGAP//CwAJAAIAAAAGAP7/CwAJAAIAAAAGAP3/CwAJAAIAAAAGAPz/CwAJAAIAAAAGAPv/CwAJAAIAAAAGAPr/CwAJAAIAAAAGAPn/CwAJAAIAAAAGAPj/BAACAAgAAAAFAAgACwAJAAMAAAAFAAcACwAJAAIAAAAFAAYACwAJAAIAAAAFAAUACwAJAAIAAAAFAAQACwAJAAIAAAAFAAMACwAJAAIAAAAFAAIACwAJAAIAAAAFAAEACwAJAAIAAAAFAAAACwAJAAIAAAAFAP//CwAJAAIAAAAFAP7/CwAJAAIAAAAFAP3/CwAJAAIAAAAFAPz/CwAJAAIAAAAFAPv/CwAJAAIAAAAFAPr/CwAJAAIAAAAFAPn/CwAJAAIAAAAFAPj/BAACAAgAAAAEAAgACwAJAAMAAAAEAAcACwAJAAIAAAAEAAYACwAJAAIAAAAEAAUACwAJAAIAAAAEAAQACwAJAAIAAAAEAAMACwAJAAIAAAAEAAIACwAJAAIAAAAEAAEACwAJAAIAAAAEAAAACwAJAAIAAAAEAP//CwAJAAIAAAAEAP7/CwAJAAIAAAAEAP3/CwAJAAIAAAAEAPz/CwAJAAIAAAAEAPv/CwAJAAIAAAAEAPr/CwAJAAIAAAAEAPn/CwAJAAIAAAAEAPj/BAACAAgAAAADAAgACwAJAAMAAAADAAcACwAJAAIAAAADAAYACwAJAAIAAAADAAUACwAJAAIAAAADAAQACwAJAAIAAAADAAMACwAJAAIAAAADAAIACwAJAAIAAAADAAEACwAJAAIAAAADAAAACwAJAAIAAAADAP//CwAJAAIAAAADAP7/CwAJAAIAAAADAP3/CwAJAAIAAAADAPz/CwAJAAIAAAADAPv/CwAJAAIAAAADAPr/CwAJAAIAAAADAPn/CwAJAAIAAAADAPj/BAACAAgAAAACAAgACwAJAAMAAAACAAcACwAJAAIAAAACAAYACwAJAAIAAAACAAUACwAJAAIAAAACAAQACwAJAAIAAAACAAMACwAJAAIAAAACAAIACwAJAAIAAAACAAEACwAJAAIAAAACAAAACwAJAAIAAAACAP//CwAJAAIAAAACAP7/CwAJAAIAAAACAP3/CwAJAAIAAAACAPz/CwAJAAIAAAACAPv/CwAJAAIAAAACAPr/CwAJAAIAAAACAPn/CwAJAAIAAAACAPj/BAACAAgAAAABAAgACwAJAAMAAAABAAcACwAJAAIAAAABAAYACwAJAAIAAAABAAUACwAJAAIAAAABAAQACwAJAAIAAAABAAMACwAJAAIAAAABAAIACwAJAAIAAAABAAEACwAJAAIAAAABAAAACwAJAAIAAAABAP//CwAJAAIAAAABAP7/CwAJAAIAAAABAP3/CwAJAAIAAAABAPz/CwAJAAIAAAABAPv/CwAJAAIAAAABAPr/CwAJAAIAAAABAPn/CwAJAAIAAAABAPj/BAACAAgAAAAAAAgACwAJAAMAAAAAAAcACwAJAAIAAAAAAAYACwAJAAIAAAAAAAUACwAJAAIAAAAAAAQACwAJAAIAAAAAAAMACwAJAAIAAAAAAAIACwAJAAIAAAAAAAEACwAJAAIAAAAAAAAACwAJAAIAAAAAAP//CwAJAAIAAAAAAP7/CwAJAAIAAAAAAP3/CwAJAAIAAAAAAPz/CwAJAAIAAAAAAPv/CwAJAAIAAAAAAPr/CwAJAAIAAAAAAPn/CwAJAAIAAAAAAPj/BAACAAgAAAD//wgACwAJAAMAAAD//wcACwAJAAIAAAD//wYACwAJAAIAAAD//wUACwAJAAIAAAD//wQACwAJAAIAAAD//wMACwAJAAIAAAD//wIACwAJAAIAAAD//wEACwAJAAIAAAD//wAACwAJAAIAAAD/////CwAJAAIAAAD///7/CwAJAAIAAAD///3/CwAJAAIAAAD///z/CwAJAAIAAAD///v/CwAJAAIAAAD///r/CwAJAAIAAAD///n/CwAJAAIAAAD///j/BAACAAgAAAD+/wgACwAJAAMAAAD+/wcACwAJAAIAAAD+/wYACwAJAAIAAAD+/wUACwAJAAIAAAD+/wQACwAJAAIAAAD+/wMACwAJAAIAAAD+/wIACwAJAAIAAAD+/wEACwAJAAIAAAD+/wAACwAJAAIAAAD+////CwAJAAIAAAD+//7/CwAJAAIAAAD+//3/CwAJAAIAAAD+//z/CwAJAAIAAAD+//v/CwAJAAIAAAD+//r/CwAJAAIAAAD+//n/CwAJAAIAAAD+//j/BAACAAgAAAD9/wgACwAJAAMAAAD9/wcACwAJAAIAAAD9/wYACwAJAAIAAAD9/wUACwAJAAIAAAD9/wQACwAJAAIAAAD9/wMACwAJAAIAAAD9/wIACwAJAAIAAAD9/wEACwAJAAIAAAD9/wAACwAJAAIAAAD9////CwAJAAIAAAD9//7/CwAJAAIAAAD9//3/CwAJAAIAAAD9//z/CwAJAAIAAAD9//v/CwAJAAIAAAD9//r/CwAJAAIAAAD9//n/CwAJAAIAAAD9//j/BAACAAgAAAD8/wgACwAJAAMAAAD8/wcACwAJAAIAAAD8/wYACwAJAAIAAAD8/wUACwAJAAIAAAD8/wQACwAJAAIAAAD8/wMACwAJAAIAAAD8/wIACwAJAAIAAAD8/wEACwAJAAIAAAD8/wAACwAJAAIAAAD8////CwAJAAIAAAD8//7/CwAJAAIAAAD8//3/CwAJAAIAAAD8//z/CwAJAAIAAAD8//v/CwAJAAIAAAD8//r/CwAJAAIAAAD8//n/CwAJAAIAAAD8//j/BAACAAgAAAD7/wgACwAJAAMAAAD7/wcACwAJAAIAAAD7/wYACwAJAAIAAAD7/wUACwAJAAIAAAD7/wQACwAJAAIAAAD7/wMACwAJAAIAAAD7/wIACwAJAAIAAAD7/wEACwAJAAIAAAD7/wAACwAJAAIAAAD7////CwAJAAIAAAD7//7/CwAJAAIAAAD7//3/CwAJAAIAAAD7//z/CwAJAAIAAAD7//v/CwAJAAIAAAD7//r/CwAJAAIAAAD7//n/CwAJAAIAAAD7//j/BAACAAgAAAD6/wgACwAJAAMAAAD6/wcACwAJAAIAAAD6/wYACwAJAAIAAAD6/wUACwAJAAIAAAD6/wQACwAJAAIAAAD6/wMACwAJAAIAAAD6/wIACwAJAAIAAAD6/wEACwAJAAIAAAD6/wAACwAJAAIAAAD6////CwAJAAIAAAD6//7/CwAJAAIAAAD6//3/CwAJAAIAAAD6//z/CwAJAAIAAAD6//v/CwAJAAIAAAD6//r/CwAJAAIAAAD6//n/CwAJAAIAAAD6//j/BAACAAgAAAD5/wgACwAJAAMAAAD5/wcACwAJAAIAAAD5/wYACwAJAAIAAAD5/wUACwAJAAIAAAD5/wQACwAJAAIAAAD5/wMACwAJAAIAAAD5/wIACwAJAAIAAAD5/wEACwAJAAIAAAD5/wAACwAJAAIAAAD5////CwAJAAIAAAD5//7/CwAJAAIAAAD5//3/CwAJAAIAAAD5//z/CwAJAAIAAAD5//v/CwAJAAIAAAD5//r/CwAJAAIAAAD5//n/CwAJAAIAAAD5//j/BAACAAgAAAD4/wgACwAJAAMAAAD4/wcACwAJAAIAAAD4/wYACwAJAAIAAAD4/wUACwAJAAIAAAD4/wQACwAJAAIAAAD4/wMACwAJAAIAAAD4/wIACwAJAAIAAAD4/wEACwAJAAIAAAD4/wAACwAJAAIAAAD4////CwAJAAIAAAD4//7/CwAJAAIAAAD4//3/CwAJAAIAAAD4//z/CwAJAAIAAAD4//v/CwAJAAIAAAD4//r/CwAJAAIAAAD4//n/CwAJAAIAAAD4//j/BAACAAgAAAD3/wgACwAIAAMAAAD3/wcACwAIAAEAAAD3/wYACwAIAAEAAAD3/wUACwAIAAEAAAD3/wQACwAIAAEAAAD3/wMACwAIAAEAAAD3/wIACwAIAAEAAAD3/wEACwAIAAEAAAD3/wAACwAIAAEAAAD3////CwAIAAEAAAD3//7/CwAIAAEAAAD3//3/CwAIAAEAAAD3//z/CwAIAAEAAAD3//v/CwAIAAEAAAD3//r/CwAIAAEAAAD3//n/CwAIAAEAAAD3//j/CwAIAAAAAAAJAAoABAAFAAUAAAAIAAoABAACAAYAAAAHAAoABAACAAYAAAAGAAoABAACAAYAAAAFAAoABAACAAYAAAAEAAoABAACAAYAAAADAAoABAACAAYAAAACAAoABAACAAYAAAABAAoABAACAAYAAAAAAAoABAACAAYAAAD//woABAACAAYAAAD+/woABAACAAYAAAD9/woABAACAAYAAAD8/woABAACAAYAAAD7/woABAACAAYAAAD6/woABAACAAYAAAD5/woABAACAAYAAAD4/woABAACAAYAAAD3/woABAACAAYAAAD2/woABAACAAYAAAAJAAwAAwACAAAAAAAIAAwAAwACAAAAAAAHAAwAAwACAAAAAAAGAAwAAwACAAAAAAAFAAwAAwACAAAAAAAEAAwAAwACAAAAAAADAAwAAwACAAAAAAACAAwAAwACAAAAAAABAAwAAwACAAAAAAAAAAwAAwACAAAAAAD//wwAAwACAAAAAAD+/wwAAwACAAAAAAD9/wwAAwACAAAAAAD8/wwAAwACAAAAAAD7/wwAAwACAAAAAAD6/wwAAwACAAAAAAD5/wwAAwACAAAAAAD4/wwAAwACAAAAAAD3/wwAAwACAAAAAAD2/wwAAwACAAAAAAAJAAsABAAFAAcAAAAIAAsABAACAAgAAAAHAAsABAACAAgAAAAGAAsABAACAAgAAAAFAAsABAACAAgAAAAEAAsABAACAAgAAAADAAsABAACAAgAAAACAAsABAACAAgAAAABAAsABAACAAgAAAAAAAsABAACAAgAAAD//wsABAACAAgAAAD+/wsABAACAAgAAAD9/wsABAACAAgAAAD8/wsABAACAAgAAAD7/wsABAACAAgAAAD6/wsABAACAAgAAAD5/wsABAACAAgAAAD4/wsABAACAAgAAAD3/wsABAACAAgAAAD2/wsABAACAAgAAAAJAAAACwAJAAIAAAAJAAEACwAJAAMAAAAJAP//CwAKAAAAAAAKAP//CwALAAAAAAAKAAAACwALAAIAAAAKAAEACwALAAMAAAAIAPf/BAAFAAUAAAD3//f/BAAAAAUAAAD4//f/BAACAAYAAAD5//f/BAACAAYAAAD6//f/BAACAAYAAAD7//f/BAACAAYAAAD8//f/BAACAAYAAAD9//f/BAACAAYAAAD+//f/BAACAAYAAAD///f/BAACAAYAAAAAAPf/BAACAAYAAAABAPf/BAACAAYAAAACAPf/BAACAAYAAAADAPf/BAACAAYAAAAEAPf/BAACAAYAAAAFAPf/BAACAAYAAAAGAPf/BAACAAYAAAAHAPf/BAACAAYAAAA=")
tile_set = ExtResource("1_c6fgw")

[node name="TileMapLayer" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAAIAPb/BAABAAQAAAAIAPX/BAACAAAAAAAHAPb/BAACAAUAAAAHAPX/BAACAAAAAAAGAPb/BAACAAUAAAAGAPX/BAACAAAAAAAFAPb/BAACAAUAAAAFAPX/BAACAAAAAAAEAPb/BAACAAUAAAAEAPX/BAACAAAAAAADAPb/BAACAAUAAAADAPX/BAACAAAAAAACAPb/BAACAAUAAAACAPX/BAACAAAAAAABAPb/BAACAAUAAAABAPX/BAACAAAAAAAAAPb/BAACAAUAAAAAAPX/BAACAAAAAAD///b/BAACAAUAAAD///X/BAACAAAAAAD+//b/BAACAAUAAAD+//X/BAACAAAAAAD9//b/BAACAAUAAAD9//X/BAACAAAAAAD8//b/BAACAAUAAAD8//X/BAACAAAAAAD7//b/BAACAAUAAAD7//X/BAACAAAAAAD6//b/BAACAAUAAAD6//X/BAACAAAAAAD5//b/BAACAAUAAAD5//X/BAACAAAAAAD4//b/BAACAAUAAAD4//X/BAACAAAAAAD3//b/BAAEAAQAAAD3//X/BAACAAAAAAAIAPf/BAAFAAMAADAHAPf/BAACAAYAAAAGAPf/BAACAAYAAAAFAPf/BAACAAYAAAAEAPf/BAACAAYAAAADAPf/BAACAAYAAAACAPf/BAACAAYAAAABAPf/BAACAAYAAAAAAPf/BAACAAYAAAD///f/BAACAAYAAAD+//f/BAACAAYAAAD9//f/BAACAAYAAAD8//f/BAACAAYAAAD7//f/BAACAAYAAAD6//f/BAACAAYAAAD5//f/BAACAAYAAAD4//f/BAACAAYAAAAJAP//BAADAAUAAAAJAP7/BAAEAAEAAAAJAP3/BAAFAAIAAAAJAPz/BAAFAAIAAAAJAPv/BAAFAAIAAAAJAPr/BAAFAAIAAAAJAPn/BAAFAAIAAAAJAPj/BAAFAAIAAAAJAPf/BAAFAAIAAAAIAP7/BAAAAAIAAAAIAP3/BAAAAAIAAAAIAPz/BAAAAAIAAAAIAPv/BAAAAAIAAAAIAPr/BAAAAAIAAAAIAPn/BAAAAAIAAAAIAPj/BAAFAAMAADAJAAgABAAFAAIAAAAJAAcABAAFAAIAAAAJAAYABAAFAAIAAAAJAAUABAAFAAIAAAAJAAQABAAFAAIAAAAJAAMABAAFAAIAAAAJAAIABAAEAAQAAAAJAAEABAACAAAAAAAIAAgABAABAAEAAAAIAAcABAAAAAIAAAAIAAYABAAAAAIAAAAIAAUABAAAAAIAAAAIAAQABAAAAAIAAAAIAAMABAAAAAIAAAAIAAIABAAAAAIAAAAIAAEABAAAAAEAAAAJAAkABAAFAAQAAAAIAAkABAACAAUAAAAHAAkABAACAAUAAAAHAAgABAACAAAAAAAGAAkABAACAAUAAAAGAAgABAACAAAAAAAFAAkABAACAAUAAAAFAAgABAACAAAAAAAEAAkABAACAAUAAAAEAAgABAACAAAAAAADAAkABAACAAUAAAADAAgABAACAAAAAAACAAkABAACAAUAAAACAAgABAACAAAAAAABAAkABAACAAUAAAABAAgABAACAAAAAAAAAAkABAACAAUAAAAAAAgABAACAAAAAAD//wkABAACAAUAAAD//wgABAACAAAAAAD+/wkABAACAAUAAAD+/wgABAACAAAAAAD9/wkABAACAAUAAAD9/wgABAACAAAAAAD8/wkABAACAAUAAAD8/wgABAACAAAAAAD7/wkABAACAAUAAAD7/wgABAACAAAAAAD6/wkABAACAAUAAAD6/wgABAACAAAAAAD5/wkABAACAAUAAAD5/wgABAACAAAAAAD4/wkABAACAAUAAAD4/wgABAACAAAAAAD3/wkABAACAAUAAAD3/wgABAAEAAEAAAD2/wkABAAAAAQAAAD2/wgABAAAAAIAAAD3/wcABAAFAAIAAAD3/wYABAAFAAIAAAD3/wUABAAFAAIAAAD3/wQABAAFAAIAAAD3/wMABAAFAAIAAAD3/wIABAAFAAIAAAD3/wEABAAFAAIAAAD3/wAABAAFAAIAAAD3////BAAFAAIAAAD3//7/BAAFAAIAAAD3//3/BAAFAAIAAAD3//z/BAAFAAIAAAD3//v/BAAFAAIAAAD2/wcABAAAAAIAAAD2/wYABAAAAAIAAAD2/wUABAAAAAIAAAD2/wQABAAAAAIAAAD2/wMABAAAAAIAAAD2/wIABAAAAAIAAAD2/wEABAAAAAIAAAD2/wAABAAAAAIAAAD2////BAAAAAIAAAD2//7/BAAAAAIAAAD2//3/BAAAAAIAAAD2//z/BAAAAAIAAAD2//v/BAAAAAIAAAD3//r/BAAFAAIAAAD3//n/BAAFAAIAAAD3//j/BAAFAAMAAAD2//r/BAAAAAIAAAD2//n/BAAAAAIAAAD2//j/BAAAAAIAAAD2//f/BAAAAAIAAAD2//b/BAAAAAIAAAD2//X/BAAAAAEAAAAJAPb/BAAFAAIAAAAJAPX/BAAFAAEAAAD+//3/BAAFAAQAAAD+//z/BAAFAAIAAAD+//v/BAAFAAIAAAD+//r/BAAFAAEAAAD9//3/BAACAAUAAAD9//z/BAACAAEAAAD9//v/BAACAAEAAAD9//r/BAACAAAAAAD8//3/BAACAAUAAAD8//z/BAACAAEAAAD8//v/BAACAAEAAAD8//r/BAACAAAAAAD7//3/BAACAAUAAAD7//z/BAACAAEAAAD7//v/BAACAAEAAAD7//r/BAACAAAAAAD6//3/BAAAAAQAAAD6//z/BAAAAAIAAAD6//v/BAAAAAIAAAD6//r/BAAAAAEAAAAFAP3/BAAFAAQAAAAFAPz/BAAFAAIAAAAFAPv/BAAFAAIAAAAFAPr/BAAEAAAAAAAEAP3/BAACAAUAAAAEAPz/BAACAAEAAAAEAPv/BAACAAEAAAAEAPr/BAACAAAAAAADAP3/BAACAAUAAAADAPz/BAACAAEAAAADAPv/BAACAAEAAAADAPr/BAACAAAAAAACAP3/BAACAAUAAAACAPz/BAACAAEAAAACAPv/BAACAAEAAAACAPr/BAACAAAAAAABAP3/BAAAAAQAAAABAPz/BAAAAAIAAAABAPv/BAAAAAIAAAABAPr/BAABAAAAAAAFAAQABAAFAAQAAAAFAAMABAAFAAIAAAAFAAIABAAFAAIAAAAFAAEABAAFAAEAAAAEAAQABAACAAUAAAAEAAMABAACAAEAAAAEAAIABAACAAEAAAAEAAEABAACAAAAAAADAAQABAACAAUAAAADAAMABAACAAEAAAADAAIABAACAAEAAAADAAEABAACAAAAAAACAAQABAACAAUAAAACAAMABAACAAEAAAACAAIABAACAAEAAAACAAEABAACAAAAAAABAAQABAAAAAQAAAABAAMABAAAAAIAAAABAAIABAAAAAIAAAABAAEABAABAAAAAAD+/wQABAAFAAQAAAD+/wMABAAFAAIAAAD+/wIABAAFAAIAAAD+/wEABAAFAAEAAAD9/wQABAACAAUAAAD9/wMABAACAAEAAAD9/wIABAACAAEAAAD9/wEABAACAAAAAAD8/wQABAACAAUAAAD8/wMABAACAAEAAAD8/wIABAACAAEAAAD8/wEABAACAAAAAAD7/wQABAACAAUAAAD7/wMABAACAAEAAAD7/wIABAACAAEAAAD7/wEABAACAAAAAAD6/wQABAAAAAQAAAD6/wMABAAAAAIAAAD6/wIABAAAAAIAAAD6/wEABAAAAAEAAAD+/wUABAAFAAUAAAD9/wUABAACAAYAAAD8/wUABAACAAYAAAD7/wUABAACAAYAAAD6/wUABAAAAAUAAAAFAAUABAAFAAUAAAAEAAUABAACAAYAAAADAAUABAACAAYAAAACAAUABAACAAYAAAABAAUABAAAAAUAAAAFAP7/BAAFAAUAAAAEAP7/BAACAAYAAAADAP7/BAACAAYAAAACAP7/BAACAAYAAAABAP7/BAAAAAUAAAD+//7/BAAFAAUAAAD9//7/BAACAAYAAAD8//7/BAACAAYAAAD7//7/BAACAAYAAAD6//7/BAAAAAUAAAD3//f/BAAFAAMAAAAIAAoABAACAAYAAAAHAAoABAACAAYAAAAGAAoABAACAAYAAAAFAAoABAACAAYAAAAEAAoABAACAAYAAAADAAoABAACAAYAAAACAAoABAACAAYAAAABAAoABAACAAYAAAAAAAoABAACAAYAAAD//woABAACAAYAAAD+/woABAACAAYAAAD9/woABAACAAYAAAD8/woABAACAAYAAAD7/woABAACAAYAAAD6/woABAACAAYAAAD5/woABAACAAYAAAD4/woABAACAAYAAAD3/woABAACAAYAAAD2/woABAAAAAUAAAAJAAoABAAFAAUAAAAIAP//BAAAAAQAAAAKAAAABAAAAAIAAAAKAP//BAABAAQAAAAKAAEABAABAAEAAAAKAP7/BAACAAAAAAAKAAIABAADAAUAAAA=")
tile_set = ExtResource("1_c6fgw")

[node name="MiningSpotManager" type="Node2D" parent="." node_paths=PackedStringArray("_spawn_point_map")]
visible = false
script = ExtResource("2_xddxw")
_spawn_point_map = NodePath("SpawnPointsTileMapLayer")
mining_tile_scene = ExtResource("3_j0li1")
_max_spawn_saturation = 0.2

[node name="SpawnPointsTileMapLayer" type="TileMapLayer" parent="MiningSpotManager"]
tile_map_data = PackedByteArray("AAD4/wgAAQAIAAIAAAD5/wgAAQAIAAIAAAD6/wgAAQAIAAIAAAD7/wgAAQAIAAIAAAD8/wgAAQAIAAIAAAD9/wgAAQAIAAIAAAD+/wgAAQAIAAIAAAD//wgAAQAIAAIAAAAAAAgAAQAIAAIAAAABAAgAAQAIAAIAAAACAAgAAQAIAAIAAAADAAgAAQAIAAIAAAAEAAgAAQAIAAIAAAAFAAgAAQAIAAIAAAAGAAgAAQAIAAIAAAAHAAgAAQAIAAIAAAD3/wcAAQAIAAIAAAD3/wYAAQAIAAIAAAD3/wUAAQAIAAIAAAD3/wQAAQAIAAIAAAD3/wMAAQAIAAIAAAD3/wIAAQAIAAIAAAD3/wEAAQAIAAIAAAD3/wAAAQAIAAIAAAD3////AQAIAAIAAAD3//7/AQAIAAIAAAD3//3/AQAIAAIAAAD3//z/AQAIAAIAAAD3//v/AQAIAAIAAAD3//r/AQAIAAIAAAD3//n/AQAIAAIAAAD3//j/AQAIAAIAAAD4//f/AQAIAAIAAAD5//f/AQAIAAIAAAD6//f/AQAIAAIAAAD7//f/AQAIAAIAAAD8//f/AQAIAAIAAAD9//f/AQAIAAIAAAD+//f/AQAIAAIAAAD///f/AQAIAAIAAAAAAPf/AQAIAAIAAAABAPf/AQAIAAIAAAACAPf/AQAIAAIAAAADAPf/AQAIAAIAAAAEAPf/AQAIAAIAAAAFAPf/AQAIAAIAAAAGAPf/AQAIAAIAAAAHAPf/AQAIAAIAAAAIAPj/AQAIAAIAAAAIAPn/AQAIAAIAAAAIAPr/AQAIAAIAAAAIAPv/AQAIAAIAAAAIAPz/AQAIAAIAAAAIAP3/AQAIAAIAAAAIAP7/AQAIAAIAAAAIAP//AQAIAAIAAAAIAAEAAQAIAAIAAAAIAAIAAQAIAAIAAAAIAAMAAQAIAAIAAAAIAAQAAQAIAAIAAAAIAAUAAQAIAAIAAAAIAAYAAQAIAAIAAAAIAAcAAQAIAAIAAAAFAAUAAQAIAAIAAAAEAAUAAQAIAAIAAAADAAUAAQAIAAIAAAACAAUAAQAIAAIAAAABAAUAAQAIAAIAAAABAAQAAQAIAAIAAAABAAMAAQAIAAIAAAABAAIAAQAIAAIAAAABAAEAAQAIAAIAAAACAAEAAQAIAAIAAAADAAEAAQAIAAIAAAAEAAEAAQAIAAIAAAAFAAEAAQAIAAIAAAAFAAIAAQAIAAIAAAAFAAMAAQAIAAIAAAAFAAQAAQAIAAIAAAD+/wUAAQAIAAIAAAD9/wUAAQAIAAIAAAD8/wUAAQAIAAIAAAD7/wUAAQAIAAIAAAD6/wUAAQAIAAIAAAD6/wQAAQAIAAIAAAD6/wMAAQAIAAIAAAD6/wIAAQAIAAIAAAD6/wEAAQAIAAIAAAD7/wEAAQAIAAIAAAD8/wEAAQAIAAIAAAD9/wEAAQAIAAIAAAD+/wEAAQAIAAIAAAD+/wIAAQAIAAIAAAD+/wMAAQAIAAIAAAD+/wQAAQAIAAIAAAD+//7/AQAIAAIAAAD9//7/AQAIAAIAAAD8//7/AQAIAAIAAAD7//7/AQAIAAIAAAD6//7/AQAIAAIAAAD6//3/AQAIAAIAAAD6//z/AQAIAAIAAAD6//v/AQAIAAIAAAD6//r/AQAIAAIAAAD7//r/AQAIAAIAAAD8//r/AQAIAAIAAAD9//r/AQAIAAIAAAD+//r/AQAIAAIAAAD+//v/AQAIAAIAAAD+//z/AQAIAAIAAAD+//3/AQAIAAIAAAABAP7/AQAIAAIAAAACAP7/AQAIAAIAAAADAP7/AQAIAAIAAAAEAP7/AQAIAAIAAAAFAP7/AQAIAAIAAAAFAP3/AQAIAAIAAAAFAPz/AQAIAAIAAAAFAPv/AQAIAAIAAAAFAPr/AQAIAAIAAAAEAPr/AQAIAAIAAAADAPr/AQAIAAIAAAACAPr/AQAIAAIAAAABAPr/AQAIAAIAAAABAPv/AQAIAAIAAAABAPz/AQAIAAIAAAABAP3/AQAIAAIAAAA=")
tile_set = SubResource("TileSet_x1n4a")

[node name="Timer" type="Timer" parent="MiningSpotManager"]
wait_time = 30.0
autostart = true

[node name="TeleportPoints" type="Node" parent="."]

[node name="TeleportPoint" parent="TeleportPoints" instance=ExtResource("6_j0li1")]
position = Vector2(148, 8)
destination_level_name = "main_town"
destination_teleport_name = "to_mining_field_0"
teleport_name = "to_main_town"

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="MiningMinigame" parent="CanvasLayer" instance=ExtResource("7_iobur")]
visible = false

[connection signal="mining_tile_activated" from="MiningSpotManager" to="." method="_on_mining_tile_activated"]
[connection signal="timeout" from="MiningSpotManager/Timer" to="MiningSpotManager" method="_on_timer_timeout"]
[connection signal="game_over" from="CanvasLayer/MiningMinigame" to="." method="_on_game_over"]
